syntax = "proto3";

option java_package = "com.hub.order_service.grpc";
option java_multiple_files = true;

/**
  stub = client proxy
    Async Stub
    Future Stub
    Blocking Stub
 */

service CourseService {
  rpc GetCourseDetails (CourseListRequest)
      returns (CourseListResponse);
}

message CourseListRequest {
  repeated int64 courseId = 1;
}

message CourseDetail {
  int64 courseId = 1;
  string courseName = 2;
  string instructor = 3;
  float price = 4;
  string imageUrl = 5;
}

message CourseListResponse {
  repeated CourseDetail courses = 1;
}

/**
 1. Proto file => generate stub code for server and client in respective programming languages
 2. Compile proto
 3. Implement gRPC server and client
 */